# caldata-rs

./: .gitignore  Cargo.toml  README.md
benches/: parse_benchmark.rs
examples/: ical_generator.rs  ical_parser.rs  line_reader.rs  property_parser.rs  vcard_parser.rs
src/: lib.rs
src/component/: mod.rs
src/generator/: ical.rs  mod.rs  property.rs
src/parser/: component.rs  content_line.rs  error.rs  line.rs  mod.rs  property.rs
src/property/: calscale.rs  dtend.rs  dtstamp.rs  dtstart.rs  due.rs  duration.rs  exdate.rs  mod.rs  rdate.rs  recurid.rs  version.rs
src/rrule/: error.rs  mod.rs  validator.rs
src/types/: date.rs  dateordatetime.rs  datetime.rs  duration.rs  mod.rs  period.rs  timezone.rs
tests/: mod.rs
tests/resources/: ical_recurrence_date.ics  ical_recurrence_date_2.ics  ical_recurrence_winter_summer.ics  ical_rfc7809.ics  ical_rfc7809_journal.ics  ical_rfc7809_todo.ics  vcard_input.vcf
tests/snapshots/: r#mod__calendar_object__0_data@0.snap  r#mod__calendar_object__0_data@1.snap  r#mod__calendar_object__0_data@2.snap  r#mod__calendar_object__0_data@3.snap  r#mod__calendar_object__0_data@4.snap  r#mod__calendar_object__0_ics@2.snap  r#mod__calendar_object__0_ics@3.snap  r#mod__calendar_object__0_ics@4.snap  r#mod__generator__generate_o365_test.snap  r#mod__generator__generate_o365_test.snap.new  r#mod__generator__generate_sabre_test.snap  r#mod__line__vcard.snap  r#mod__parser__ical_example_1.snap  r#mod__parser__ical_example_2.snap  r#mod__parser__ical_example_events.snap  r#mod__parser__ical_example_freebusy.snap  (+88 more)
(+63 files in other folders)
